# kompass

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Jenkinsfile  Makefile  NOTICE.txt  README.md  docker-compose.yaml  docker.env  genindex.html  index.html  pyproject.toml  requirements.txt  ruff.toml  runserver  search.html  searchindex.js
.agent/: validation.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/development_manual/: index.doctree  (+5 more)
_static/: pygments.css
authentik-integration/: objects.inv  search.html  searchindex.js
cm-ci-build/: genindex.html
cm-dev-docker/: searchindex.js
cm-docker-images/: index.html
cm-docs-contribution/: searchindex.js
cm-docs-update/: .buildinfo  searchindex.js
cm-fix-po-files/: searchindex.js
cm-fix-test-latex/: searchindex.js
cm-make-dev-test/: searchindex.js
cm-test-verbosity/: searchindex.js
deploy/: docker-compose.yaml
development_manual/: architecture.html  authentication.html  ci.html  contributing.html  deployment.html  index.html  setup.html  testing.html
implement-orchestra-fork/: search.html  searchindex.js
jdav_web/: .coveragerc  Dockerfile  kompass.uwsgi.ini  manage.py  my.cnf  requirements.txt  utils.py
local-dev-setup/: objects.inv  searchindex.js
mk-docs/: searchindex.js
mk-historize-settings/: about.html
mk-improve-make/: searchindex.js
mk-personal-profile/: objects.inv
rule_examples/: transportation.jsonata
user_manual/: excursions.html  finance.html  getstarted.html  index.html  members.html  myprofile.html  training.html  waitinglist.html
(+783 files in other folders)
